--- a/index.html
+++ b/index.html
@@ -3593,7 +3593,10 @@ document.addEventListener('DOMContentLoaded', async () => {
 
         if (Array.isArray(data)) {
             notifications = data.map(file => ({
-                .....file,
+                name: file.name,
+                url: file.url,
+                mimeType: file.mimeType,
+                updatedTime: file.updatedTime,
                 level: detectLevel(file.name)
             }));
         } else {
