--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no">
     <!-- META DESCRIPTION ADDED FOR SEO -->
     <meta name="description" content="موقع لمساعدة طلاب قسم الميكاترونكس في جامعة الزقaziق الأهلية، يوفر موارد دراسية، خطط، حاسبة معدل تراكمي، والمزيد لتسهيل الرحلة التعليمية.">
     <title>Mechatronics Data</title>
@@ -834,6 +834,9 @@
 
         .notifications-list {
             width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: var(--spacing-md);
         }
 
         .notification-card {
@@ -867,12 +870,7 @@
             margin-top: 0.35rem;
         }
 @media (min-width: 992px) {
-            #notifications-section .notifications-list {
-                display: grid;
-                grid-template-columns: repeat(3, minmax(0, 1fr));
-                gap: var(--spacing-md);
-            }
-
+            /* على الديسكتوب نخلي الشكل زي الموبايل: كروت تحت بعض */
             #notifications-section .notification-card {
                 align-items: flex-start;
                 text-align: right;
@@ -2211,6 +2209,7 @@ nimation properties added via .animated-section .section-header */
   .bottom-nav.hidden { transform: translateX(-50%) translateY(120%); opacity: 0; pointer-events: none; }
 
   .bottom-nav .nav-item {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2240,13 +2239,10 @@ nimation properties added via .animated-section .section-header */
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin-top: 2px;
-  }
-
-  @media (min-width: 768px) {
-    .bottom-nav .nav-item .notif-badge {
-      display: none;
-    }
+    position: absolute;
+    top: -6px;
+    right: -2px;
+    box-shadow: 0 0 0 2px rgba(15, 23, 42, 0.85);
   }
 .bottom-nav .nav-item svg { width: 22px; height: 22px; fill: var(--primary-color); }
 
@@ -2304,6 +2300,18 @@ nimation properties added via .animated-section .section-header */
   }
 
 }
+
+
+
+/* Fix full-screen height on mobile (Android + iOS) */
+:root {
+    --vh: 1vh;
+}
+
+body {
+    min-height: calc(var(--vh, 1vh) * 100);
+}
+
 
 </style>
     
@@ -3247,7 +3255,6 @@ html { scroll-behavior: smooth; }
 <div class="overlay" id="overlay"></div>
 <nav class="main-nav" id="mainNav">
   <ul class="main-nav-list">
-    <li><a href="home">الرئيسية</a></li>
     <li><a href="#cards-section">الخطط</a></li>
     <li><a href="#extras-section">الموارد</a></li>
     <li><a href="#notifications-section">الإشعارات</a></li>
@@ -3516,6 +3523,7 @@ document.addEventListener('DOMContentLoaded', async () => {
 
     const renderNotifications = () => {
         if (!notifications || notifications.length === 0) {
+            container.classList.add("single-notification");
             container.innerHTML = `
                 <div class="info-card notification-card">
                     <h3>مافيش إشعارات حالياً</h3>
@@ -3530,6 +3538,7 @@ document.addEventListener('DOMContentLoaded', async () => {
             : notifications.filter(item => item.level === activeLevel);
 
         if (filtered.length === 0) {
+            container.classList.add("single-notification");
             container.innerHTML = `
                 <div class="info-card notification-card">
                     <h3>مافيش إشعارات لهذا المستوى</h3>
@@ -3540,6 +3549,7 @@ document.addEventListener('DOMContentLoaded', async () => {
         }
 
         container.innerHTML = '';
+        container.classList.toggle("single-notification", filtered.length === 1);
 
         filtered.forEach(file => {
             const date = new Date(file.updatedTime);
@@ -3636,6 +3646,20 @@ document.addEventListener('DOMContentLoaded', async () => {
         `;
     }
 });</script>
+
+<script>
+  // Fix 100vh issues on mobile browsers (Android + iOS)
+  (function () {
+    const setVh = () => {
+      const vh = window.innerHeight * 0.01;
+      document.documentElement.style.setProperty('--vh', vh + 'px');
+    };
+    window.addEventListener('resize', setVh);
+    window.addEventListener('orientationchange', setVh);
+    setVh();
+  })();
+</script>
+
 </body>
 
 </html>
