--- a/index.html
+++ b/index.html
@@ -3740,6 +3740,39 @@ document.addEventListener('DOMContentLoaded', async () => {
   })();
 </script>
 
+
+<!-- ================================== -->
+<!-- START: VISITOR COUNTER SCRIPT -->
+<!-- ================================== -->
+<script>
+document.addEventListener('DOMContentLoaded', async () => {
+    const VISITOR_COUNTER_API_URL = "/.netlify/functions/visitor-count";
+    const counterElement = document.getElementById('visitor-count');
+    if (!counterElement) return;
+
+    try {
+        const response = await fetch(VISITOR_COUNTER_API_URL, {
+            method: 'POST'
+        });
+
+        if (!response.ok) {
+            throw new Error("HTTP " + response.status);
+        }
+
+        const data = await response.json();
+        if (data && typeof data.count === "number") {
+            // عرض الرقم بشكل منسّق بالعربي
+            counterElement.textContent = data.count.toLocaleString("ar-EG");
+        } else {
+            counterElement.textContent = "—";
+        }
+    } catch (error) {
+        console.error("Error updating visitor counter:", error);
+        counterElement.textContent = "—";
+    }
+});
+</script>
+
 </body>
 
 </html>
